language/move-lang/tests/move_check/unit_test/invalid_expected_failure_name.move
// straight assignment of an abort code to the expected_failure attribute isn't allowed
module 0x1::M {
    #[test]
    #[expected_failure=1]
    fun f() { }
}
